# 99x

./: .gitignore  README.md  pyproject.toml
agent99x/: cli.py  commands.py  compaction.py  config.py  config_codec.py  config_io.py  contexts.py  conversation.py  core.py  llm.py  logs.py  mcp.py  prompt.py  providers.py  reasoning.py  scopes.py  session.py  skills.py  todos.py  tools.py  tui.py  validation.py
agent99x/_defaults/: AGENT.md
agent99x/_defaults/skills/fetch_recent_rss/: SKILL.md
agent99x/_defaults/skills/fetch_recent_rss/scripts/: fetch_rss.py
agent99x/_defaults/skills/fetch_rss/: SKILL.md
agent99x/_defaults/skills/weather/: SKILL.md
agent99x/_defaults/skills/web_search/: SKILL.md
docs/: three-kinds.md
tests/: conftest.py  test_agent_loop.py  test_cli_reasoning.py  test_config_codec.py  test_conversation.py  test_file_tools.py  test_helpers.py  test_logs.py  test_mcp_config.py  test_patch_tool.py  test_plan_mode.py  test_provider_config.py  test_reasoning.py  test_reasoning_integration.py  test_registry.py  test_run_bash.py  test_runtime_paths.py  test_scopes.py  test_session_save.py  test_slash_commands.py  test_subagent_overrides.py  test_thinking_renderer.py  test_three_kinds.py  test_todos.py  test_todos_module.py
